created more graphic

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
       <hr style="margin:75px 0;">
 
       <h1>Stacked Bar Chart</h1>
-      <div id="stackedcolumn"></div>
+      <div id="stackedbar"></div>
       <hr style="margin:75px 0;">
 
 
@@ -58,6 +58,9 @@
       <div id="scatter"></div>
       <hr style="margin:75px 0;">
 
+      <h1>Dot Plot</h1>
+      <div id="dot"></div>
+      <hr style="margin:75px 0;">
 
   </div>
 
