--- a/app/index.html
+++ b/app/index.html
@@ -1,75 +1,58 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-<meta charset="UTF-8">
-<title>Gulp Template</title>
+<meta charset='utf-8' />
+<title>Mapbox Test</title>
+<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.2/mapbox-gl.js'></script>
+<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.2/mapbox-gl.css' rel='stylesheet' />
 <link rel="stylesheet" href="css/styles.min.css">
-
-<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.1/ScrollMagic.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script> -->
-<!-- <script src="js/library/vega@5.3.5.min.js"></script>
-<script src="js/library/vega-lite@3.2.1.min.js"></script>
-<script src="js/library/vega-embed@4.0.0.min.js"></script> -->
-<script src="js/library/d3.v5.min.js"></script>
-<script src="js/library/d3-tip.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-</head>
 
+</head>
 <body>
 
-  <div class="wrapper">
-
-      <h1>Column Chart</h1>
-      <div id="column"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Grouped Column Chart</h1>
-      <div id="groupedcolumn"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Line Chart</h1>
-      <div id="line"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Multi-Line Chart</h1>
-      <div id="multiline"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Bar Chart</h1>
-      <div id="bar"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Grouped Bar Chart</h1>
-      <div id="groupedbar"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Stacked Column Chart</h1>
-      <div id="stackedcolumn"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Stacked Bar Chart</h1>
-      <div id="stackedcolumn"></div>
-      <hr style="margin:75px 0;">
 
 
-      <h1>Scatter Plot</h1>
-      <div id="scatter"></div>
-      <hr style="margin:75px 0;">
 
+<div id='map'></div>
+<div id='features'>
+<section id='start' class='active'>
+<h3>Start</h3>
+<p>Lorem ipsum dolor fffsit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</section>
+<section id='river'>
+<h3>River Street Bridge</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</section>
+<!-- </section>
+<section id='london-bridge'>
+<h3>Western Avenue Bridge</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-  </div>
+</section> -->
+<section id='weeks'>
+<h3>John W.Weeks Bridge</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</section>
+<!-- </section>
+<section id='gloucester'>
+<h3>Anderson Memorial Bridge</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-  <!--build:js js/main.min.js -->
-  <script src="js/plugins/boilerplate.js"></script>
-  <script src="js/plugins/d3-column.js"></script>
-  <script src="js/plugins/d3-groupcolumn.js"></script>
-  <!-- <script src="js/plugins/d3-coal.js"></script> -->
-  <script src="js/plugins/d3-donut.js"></script>
-  <script src="js/plugins/d3-map.js"></script>
-  <!--endbuild-->
+</section> -->
+<section id='eliot'>
+<h3>Eliot Bridge</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+</section>
+<section id='finish'>
+    <h3>Herter Park Finish Line</h3>
+    <p>Mycroft responds to Sherlock's telegram and mentions several spies. Hugo Oberstein of 13 Caulfield Gardens catches Sherlock's eye. He heads to the nearby Gloucester Road station to investigate and learns that the windows of Caulfield Gardens open over rail tracks where trains stop frequently.</p>
+</section>
+</div>
+
+<script src="js/main.min.js"></script>
 
 </body>
-
 </html>
