create responsive templates

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Gulp Template</title>
+<title>Daily Graphics Template</title>
 <link rel="stylesheet" href="css/styles.min.css">
 
 <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -25,12 +25,21 @@
       <div id="column"></div>
       <hr style="margin:75px 0;">
 
+      <h1>Column Chart Responsive</h1>
+      <div id="columnresponsive"></div>
+      <hr style="margin:75px 0;">
+
+
       <h1>Grouped Column Chart</h1>
       <div id="groupedcolumn"></div>
       <hr style="margin:75px 0;">
 
       <h1>Line Chart</h1>
       <div id="line"></div>
+      <hr style="margin:75px 0;">
+
+      <h1>Line Chart Responsive</h1>
+      <div id="lineresponsive"></div>
       <hr style="margin:75px 0;">
 
       <h1>Multi-Line Chart</h1>
