responsive line and group bar chart

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,11 @@
       <div id="groupedcolumn"></div>
       <hr style="margin:75px 0;">
 
+      <h1>Grouped Column Chart Responsive</h1>
+      <div id="groupedcolumnResponsive"></div>
+      <hr style="margin:75px 0;">
+
+
       <h1>Line Chart</h1>
       <div id="line"></div>
       <hr style="margin:75px 0;">
@@ -52,6 +57,10 @@
 
       <h1>Grouped Bar Chart</h1>
       <div id="groupedbar"></div>
+      <hr style="margin:75px 0;">
+
+      <h1>Responsive Grouped Bar Chart</h1>
+      <div id="groupedbarResponsive"></div>
       <hr style="margin:75px 0;">
 
       <h1>Stacked Column Chart</h1>
