--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,10 @@
       <div id="bar"></div>
       <hr style="margin:75px 0;">
 
+      <h1>Bar Chart Responsive</h1>
+      <div id="barresponsive"></div>
+      <hr style="margin:75px 0;">
+
       <h1>Grouped Bar Chart</h1>
       <div id="groupedbar"></div>
       <hr style="margin:75px 0;">
