--- a/app/index.html
+++ b/app/index.html
@@ -2,67 +2,73 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Coronavirus Totals</title>
-    <link rel="stylesheet" href="css/styles.min.css">
+<meta charset="UTF-8">
+<title>Gulp Template</title>
+<link rel="stylesheet" href="css/styles.min.css">
 
-    <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.1/ScrollMagic.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script> -->
-    <!-- <script src="js/library/vega@5.3.5.min.js"></script>
+<!-- <script src="js/library/vega@5.3.5.min.js"></script>
 <script src="js/library/vega-lite@3.2.1.min.js"></script>
 <script src="js/library/vega-embed@4.0.0.min.js"></script> -->
-<script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="js/library/d3-tip.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/moment.min.js"></script>
-    <script src="https://d3js.org/d3-array.v2.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<script src="js/library/d3.v5.min.js"></script>
+<script src="js/library/d3-tip.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 
 <body>
 
-    <div class="wrapper">
+  <div class="wrapper">
 
-        <h1>COVID-19 Totals</h1>
-        <div id="content">
-            <div id="button_container">
-                <button type="button" id="us" class="chartnav">United States</button>
-                <button type="button" id="global" class="chartnav">Global</button>
-            </div>
-            <div class="legend">
-                <div class="legend_piece">
-                    <div class="squareBox1"></div>
-                    <p class="text">Confirmed</p>
-                </div>
-                <div class="legend_piece">
-                    <div class="squareBox3"></div>
-                    <p class="text">Deaths</p>
-                </div>
+      <h1>Column Chart</h1>
+      <div id="column"></div>
+      <hr style="margin:75px 0;">
 
-            </div>
+      <h1>Grouped Column Chart</h1>
+      <div id="groupedcolumn"></div>
+      <hr style="margin:75px 0;">
 
-            <div id = "virus_global">
-            <div id="globalSlider"></div>
-            <button id="global-play-button">Start</button>
-            <div id="global-multi-line"></div>
-            </div>
+      <h1>Line Chart</h1>
+      <div id="line"></div>
+      <hr style="margin:75px 0;">
 
-            <div id = "virus_us">
-                <div id="usSlider"></div>
-                <button id="us-play-button">Start</button>
-                <div id="us-multi-line"></div>
-            </div>
-        </div>
+      <h1>Multi-Line Chart</h1>
+      <div id="multiline"></div>
+      <hr style="margin:75px 0;">
 
-    </div>
+      <h1>Bar Chart</h1>
+      <div id="bar"></div>
+      <hr style="margin:75px 0;">
 
-    <!--build:js js/main.min.js -->
-    <script src="js/plugins/globalVirus.js"></script>
-    <script src="js/plugins/boilerplate.js"></script>
+      <h1>Grouped Bar Chart</h1>
+      <div id="groupedbar"></div>
+      <hr style="margin:75px 0;">
+
+      <h1>Stacked Column Chart</h1>
+      <div id="stackedcolumn"></div>
+      <hr style="margin:75px 0;">
+
+      <h1>Stacked Bar Chart</h1>
+      <div id="stackedcolumn"></div>
+      <hr style="margin:75px 0;">
 
 
+      <h1>Scatter Plot</h1>
+      <div id="scatter"></div>
+      <hr style="margin:75px 0;">
 
-    <!--endbuild-->
+
+  </div>
+
+  <!--build:js js/main.min.js -->
+  <script src="js/plugins/boilerplate.js"></script>
+  <script src="js/plugins/d3-column.js"></script>
+  <script src="js/plugins/d3-groupcolumn.js"></script>
+  <!-- <script src="js/plugins/d3-coal.js"></script> -->
+  <script src="js/plugins/d3-donut.js"></script>
+  <script src="js/plugins/d3-map.js"></script>
+  <!--endbuild-->
 
 </body>
 
