create waffle chart

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Gulp Template</title>
+<title>COVID-19 Prisons</title>
 <link rel="stylesheet" href="css/styles.min.css">
 
 <script src="js/library/d3.v5.min.js"></script>
@@ -15,54 +15,16 @@
 
   <div class="wrapper">
 
-      <h1>Column Chart</h1>
-      <div id="column"></div>
-      <hr style="margin:75px 0;">
+      <h1>COVID-19 Prisons</h1>
+      <p>As of May 06, 2020 there are 20,0119 cases among prisoners</p>
+      <div class="waffle"></div>
 
-      <h1>Grouped Column Chart</h1>
-      <div id="groupedcolumn"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Line Chart</h1>
-      <div id="line"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Multi-Line Chart</h1>
-      <div id="multiline"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Bar Chart</h1>
-      <div id="bar"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Grouped Bar Chart</h1>
-      <div id="groupedbar"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Stacked Column Chart</h1>
-      <div id="stackedcolumn"></div>
-      <hr style="margin:75px 0;">
-
-      <h1>Stacked Bar Chart</h1>
-      <div id="stackedcolumn"></div>
-      <hr style="margin:75px 0;">
-
-
-      <h1>Scatter Plot</h1>
-      <div id="scatter"></div>
-      <hr style="margin:75px 0;">
 
 
   </div>
 
   <!--build:js js/main.min.js -->
   <script src="js/plugins/boilerplate.js"></script>
-  <script src="js/plugins/d3-column.js"></script>
-  <script src="js/plugins/d3-groupcolumn.js"></script>
-  <!-- <script src="js/plugins/d3-coal.js"></script> -->
-  <script src="js/plugins/d3-donut.js"></script>
-  <script src="js/plugins/d3-map.js"></script>
-  <!--endbuild-->
 
 </body>
 
